--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -14,7 +14,13 @@
   "avatar_mssge_scrum_one": "Scrum is a framework for developing, delivering, and sustaining complex products. This definition consists of Scrum’s <strong> roles, events, artifacts, </strong> and the <strong> rules </strong> that bind them together.",
   "avatar_mssge_scrum_two": "Each component within the framework serves a specific purpose and is essential to Scrum’s success and usage.",
   "avatar_mssge_scrum_three": "Scrum is: <br> <ul> <li>Lightweight</li><li>Simple to understand</li> <li>Difficult to master</li></ul>",
-  "avatar_mssge_artifacts_one": "Scrum’s <strong>artifacts</strong> represent work or value to provide transparency and opportunities for inspection and adaptation.",
+  "avatar_mssge_artifacts_one": "Scrum’s <strong>artifacts</strong> represent work or value to provide transparency and opportunities for <strong>inspection and adaptation.</strong>",
   "avatar_mssge_artifacts_two": "<strong>Artifacts</strong> defined by Scrum are specifically designed to maximize transparency of key information so that everybody has the same understanding of the artifact.",
-  "avatar_mssge_artifacts_three": "There are 3 artifacts, the <strong> Product Backlog, Sprint Backlog</strong> and the <strong> Increment </strong>. If you want to know about them, click on the buttons below!"
+  "avatar_mssge_artifacts_three": "There are 3 artifacts, the <strong> Product Backlog, Sprint Backlog</strong> and the <strong> Increment </strong>. If you want to know about them, click on the buttons below!",
+  "avatar_mssge_values_one": "When the values of <strong>commitment, courage, focus, openness and respect </strong> are embodied and lived by the Scrum Team, the Scrum pillars of transparency, inspection, and adaptation come to life and build trust for everyone.",
+  "avatar_mssge_values_two": "The Scrum Team members learn and explore those values as they work with the Scrum events, roles and artifacts.",
+  "avatar_mssge_roles_one": "The Scrum Team consist of a <strong>Product Owner</strong>., the <strong>Development Team</strong>, and a <strong>Scrum Master</strong>.",
+  "avatar_mssge_roles_two": "<strong>Teams are self-organizing:</strong> Choose how best to accomplish their work, rather than being directed by others outside the team.",
+  "avatar_mssge_roles_three": "<strong>Teams are cross-functional:</strong> Have all competencies needed to accomplish the work without depending on others not part of the team.",
+  "avatar_mssge_learn_more": "<strong>If you want to know more then click on any of the buttons below!</strong>"
 }
