Home - Adding event section, changing assets and adding new mssges (Images)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,10 @@
 {
-  "avatar_mssge_learn_more": "<strong>If you want to know more then click on any of the buttons below!</strong>",
+  "avatar_mssge_learn_more": "<strong>If you want to know more then click on any of the icons below!</strong>",
   "avatar_mssge_learn_more-demo": "If you want to know more then click on the <strong>Demo</strong> button below!",
+  "events_sprint-planning": "Sprint Planning",
+  "events_daily-scrum": "Daily Scrum",
+  "events_sprint-review": "Sprint Review",
+  "events_sprint-retro": "Sprint Retrospective",
   "artifact_product-backlog": "Product Backlog",
   "artifact_sprint-backlog": "Sprint Backlog",
   "artifact_increment": "Increment",
@@ -13,6 +17,8 @@
   "roles_product-owner": "Prduct Owner",
   "roles_dev-team": "Dev Team",
   "avatar_mssge_welcome_one": "Hey, I’m the <strong>Scrum Master</strong>, my role is to coach and guide you to understand Scrum. Well, if you want to know more then <strong> click on any of the titles below! </strong>",
+  "avatar_mssge_events_one": "Prescribed events are used in Scrum to create regularity and to minimize the need for meetings not defined in Scrum. All events are time-boxed events, such that every event has a maximum duration. Once a Sprint begins, its duration is fixed and cannot be shortened or lengthened.",
+  "avatar_mssge_events_two": "Other than the Sprint itself, which is a container for all other events, each event in Scrum is a formal opportunity to <strong> inspect </strong> and <strong> adapt </strong> something. These events are specifically designed to enable critical transparency and inspection.",
   "avatar_mssge_scrum_one": "Scrum is a framework for developing, delivering, and sustaining complex products. This definition consists of Scrum’s <strong> roles, events, artifacts, </strong> and the <strong> rules </strong> that bind them together.",
   "avatar_mssge_scrum_two": "Each component within the framework serves a specific purpose and is essential to Scrum’s success and usage.",
   "avatar_mssge_scrum_three": "Scrum is: <br> <ul> <li>Lightweight</li><li>Simple to understand</li> <li>Difficult to master</li></ul>",
