--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,16 +1,52 @@
 {
+  "menu_events": "Eventos",
+  "menu_roles": "Roles",
+  "menu_artifacts": "Artefactos",
+  "avatar_mssge_learn_more": "<strong>Si quires saber mas dale click a cualquiera de los iconos de abajo o visita la <a href='https://www.scrumguides.org/docs/scrumguide/v1/scrum-guide-es.pdf'>Guia de Scrum </a>!</strong>",
+  "avatar_mssge_learn_more-demo": "If you want to know more then click on the <strong>Demo</strong> button below!",
+  "events_sprint-planning": "Plaificación de Sprint",
+  "events_daily-scrum": "Scrum Diario",
+  "events_sprint-review": "Revisión de Sprint",
+  "events_sprint-retro": "Retrospectiva de Sprint",
   "artifact_product-backlog": "Pila de Producto",
   "artifact_sprint-backlog": "Pila de Sprint",
   "artifact_increment": "Incremento",
   "values_commitment": "Compromiso",
   "values_courage": "Coraje",
   "values_focus": "Foco",
-  "values_opennes": "Apertura",
+  "values_openness": "Apertura",
   "values_respect": "Respeto",
   "roles_scrum-master": "Scrum Master",
-  "roles_product-owner": "Prop. del Product",
-  "roles_dev-team": "Eq. de Desarrollo",
-  "avatar_mssge_welcome": "Hey, Soy el Scrum Master, mi rol es entrenarte y guiarte para que entiendas Scrum!",
-  "avatar_mssge_one": "Scrum is a framework for developing, delivering, and sustaining complex products. This definition consists of Scrum’s <strong>roles, events, artifacts,</strong> and the rules that bind them together",
-  "avatar_mssge_two": "Well, that's a long introduction... If you wanna know more you can <strong>click</strong> on any of the items shown right now!"
+  "roles_product-owner": "Propietario del Producto",
+  "roles_dev-team": "Equipo de Desarrollo",
+  "avatar_mssge_welcome_one": "Hey, Soy el Scrum Master, mi rol es entrenarte y guiarte para que entiendas Scrum. <br> Si quieres saber más <strong>dale click a cualquiera de los titulos de abajo! </strong>",
+  "avatar_mssge_events_one": "En Scrum existen eventos predefinidos con el fin de crear regularidad y minimizar la necesidad de reuniones no definidas en Scrum. Todos los eventos son bloques de tiempo (time-boxes), de tal modo que todos tienen una duración máxima. ",
+  "avatar_mssge_events_two": "Además del propio Sprint, que es un contenedor del resto de eventos, cada uno de los eventos de Scrum constituye una oportunidad formal para la <strong>inspección</strong> y <strong>adaptación</strong> de algún aspecto. Estos eventos están diseñados específicamente para habilitar las vitales transparencia e inspección.",
+  "avatar_mssge_scrum_one": "Scrum es un marco de trabajo para el desarrollo y el mantenimiento de productos complejos. Esta definición contiene los <strong>roles, eventos y artefactos</strong> de Scrum, y las reglas que los relacionan.",
+  "avatar_mssge_scrum_two": "Cada componente dentro del marco de trabajo sirve a un propósito específico y es esencial para el éxito de Scrum y para su uso.",
+  "avatar_mssge_scrum_three": "Scrum es: <br> <ul> <li>Ligerot</li><li>Fácil de entender</li> <li>Extremadamente dificil de llegar a dominar</li></ul>",
+  "avatar_mssge_artifacts_one": "Los artefactos de Scrum representan trabajo o valor en diversas formas que son útiles para proporcionar transparencia y oportunidades para la <strong>inspección</strong> y <strong>adaptación</strong>",
+  "avatar_mssge_artifacts_two": "Los <strong> artefactos </strong> definidos por Scrum están diseñados específicamente para maximizar la transparencia de la información clave, que es necesaria para asegurar que todos tengan el mismo entendimiento del artefacto. ",
+  "avatar_mssge_artifacts_three": "Hay 3 artefactos, la <strong> Lista de Producto, Lista de Pendientes del Sprint</strong> y el <strong> Incremento </strong>. Si quieres saber mas sobre ellos, dale click a los iconos!",
+  "avatar_mssge_values_one": "Cuando los valores <strong>compromiso, coraje, foco, apertura y respeto</strong> es Scrum, los pilares de transparencia, inspección, y adaptación vienen a la vida y generan confianza a todos los involucrados.",
+  "avatar_mssge_values_two": "Los miembros del equipo de scrum aprenden y exploran dichos valores mientras que trabajen con eventos, roles y artefactos.",
+  "avatar_mssge_roles_one": "El Equipo Scrum consiste en un <strong> Dueño de Producto (Product Owner)</strong> , el <strong> Equipo de Desarrollo (Development Team)</strong> y un <strong>Scrum Master</strong>.",
+  "avatar_mssge_roles_two": " Los equipos son <strong>autoorganizados</strong>: Eligen la mejor forma de llevar a cabo su trabajo y no son dirigidos por personas externas al equipo.",
+  "avatar_mssge_roles_three": "Los equipos son <strong> multifuncionales</strong> tienen todas las competencias necesarias para llevar a cabo el trabajo sin depender de otras personas que no son parte del equipo.",
+  "avatar_mssge_artifacts_backlog_one": "<strong>La Lista de Producto</strong> es una lista ordenada de todo lo que podría ser necesario en el producto, y es la única fuente de requisitos para cualquier cambio a realizarse en el producto. El <strong> Dueño de Producto (Product Owner) </strong> es el responsable de la Lista de Producto, incluyendo su contenido, disponibilidad y ordenación.",
+  "avatar_mssge_artifacts_backlog_two": "Una <strong> Lista de Producto </strong> nunca está completa. El desarrollo más temprano de la misma solo refleja los requisitos conocidos y mejor entendidos al principio.",
+  "avatar_mssge_artifacts_sprintBacklog_one" : "La <strong> Lista de Pendientes </strong> del Sprint es el conjunto de elementos de la <strong> Lista de Producto </strong> seleccionados para el Sprint, más un plan para entregar el Incremento de producto y conseguir el Objetivo del Sprint.",
+  "avatar_mssge_artifacts_sprintBacklog_two" : "<strong>The Sprint Backlog</strong>  is a forecast by the Development Team about what functionality will be in the next Increment and the work needed to deliver that functionality into a \"Done\" Increment.",
+  "avatar_mssge_artifacts_increment_one": "<strong>The Increment</strong> is the sum of all the Product Backlog items completed during a Sprint and the value of the increments of all previous Sprints. At the end of a Sprint, the new Increment must be \"Done,\" which means it must be in useable condition and meet the Scrum Team’s definition of \"Done\".",
+  "avatar_mssge_values_commitment_one": "People personally commit to achieving the goals of the Scrum Team.",
+  "avatar_mssge_values_courage_one": "Scrum Team members have courage to do the right thing and work on tough problems.",
+  "avatar_mssge_values_opennes_one": "The Scrum team and its stakeholders agree to be open about all the work and challenges with performing work.",
+  "avatar_mssge_values_respect_one": "Scrum Team members respect each other to be capable, independent people.",
+  "avatar_mssge_values_focus_one": "Everyone focuses on the work of the Sprint and the goals of the Scrum Team.",
+  "avatar_mssge_roles_scrumMaster_one": "The </strong>Scrum Master</strong> is a servant-leader for the Scrum Team. The Scrum Master helps those outside the Scrum Team understand which of their interactions with the Scrum Team are helpful and which aren’t. The Scrum Master helps everyone change these interactions to maximize the value created by the Scrum Team.",
+  "avatar_mssge_roles_productOwner_one": "The Product Owner is responsible for maximizing the value of the product resulting from work of the Development Team. How this is done may vary widely across organizations, Scrum Teams, and individuals.",
+  "avatar_mssge_roles_productOwner_two":"The <strong>Product Owner</strong> is one person, not a committee. The Product Owner may represent the desires of a committee in the Product Backlog, but those wanting to change a Product Backlog item’s priority must address the Product Owner.",
+  "avatar_mssge_roles_productOwner_three":"The <strong>Product Owner</strong> is one person, not a committee. The Product Owner may represent the desires of a committee in the Product Backlog, but those wanting to change a Product Backlog item’s priority must address the Product Owner.",
+  "avatar_mssge_roles_devTeam_one": "The <strong>Development Team</strong> consists of professionals who do the work of delivering a potentially releasable Increment of \"Done\" product at the end of each Sprint. A \"Done\" increment is required at the Sprint Review. Only members of the Development Team create the Increment.",
+  "avatar_mssge_roles_devTeam_two": "<strong>Development Teams</strong> are structured and empowered by the organization to organize and manage their own work. The resulting synergy optimizes the Development Team’s overall efficiency and effectiveness."
 }
