Home - Adding not-supported view (mobile resolution)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "not-supported-resolution": "Sorry, this app is not mobile friendly! <br/> <br/>  If you wanna check more of my work <strong> click on any the links below! </strong>",
   "menu_events": "Events",
   "menu_roles": "Roles",
   "menu_artifacts": "Artifacts",
