--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,4 +1,5 @@
 {
+  "not-supported-resolution": "Lo siento, esta app no esta dispuble para moviles!",
   "menu_events": "Eventos",
   "menu_roles": "Roles",
   "menu_artifacts": "Artefactos",
