--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -53,5 +53,8 @@
   "product-backlog_list_one": "A Product Backlog is never complete. It might change once you have a better understanging of the product",
   "product-backlog_list_two": "Product Backlog is dynamic; it constantly changes to identify what the product needs to be appropriate, competitive, and useful",
   "product-backlog_list_three": "For one product there is only one Product Backlog. Even though there is more than one Scrum Team.",
-  "product-backlog_list_four": "Any time you can add details, estimates and order the item, we call Produck Backlog Refinement to this act and you can do it collaboration with the Developer Team"
+  "product-backlog_list_four": "Any time you can add details, estimates and order the item, we call Produck Backlog Refinement to this act and you can do it collaboration with the Developer Team",
+  "sprint-backlog_one": "The Sprint Backlog is a plan with enough detail that changes in progress can be understood in the Daily Scrum. The Development Team modifies the Sprint Backlog throughout the Sprint, and the Sprint Backlog emerges during the Sprint. This emergence occurs as the Development Team works through the plan and learns more about the work needed to achieve the Sprint Goal.",
+  "sprint-backlog_two": "As new work is required, the Development Team adds it to the Sprint Backlog. As work is performed or completed, the estimated remaining work is updated. When elements of the plan are deemed unnecessary, they are removed. Only the Development Team can change its Sprint Backlog during a Sprint. The Sprint Backlog is a highly visible, real-time picture of the work that the Development Team plans to accomplish during the Sprint, and it belongs solely to the Development Team."
+
 }
