Increment - Adding ProductIncrement view

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -38,7 +38,8 @@
   "avatar_mssge_artifacts_backlog_two": "<strong>The Product Owner </strong> is responsible for the Product Backlog, including its content, availability, and ordering.",
   "avatar_mssge_artifacts_sprintBacklog_one" : "<strong>The Sprint Backlog</strong> is the set of Product Backlog items selected for the Sprint, plus a plan for delivering the product Increment and realizing the <strong>Sprint Goal.</strong> ",
   "avatar_mssge_artifacts_sprintBacklog_two" : "<strong>The Sprint Backlog</strong>  is a forecast by the Development Team about what functionality will be in the next Increment and the work needed to deliver that functionality into a \"Done\" Increment.",
-  "avatar_mssge_artifacts_increment_one": "<strong>The Increment</strong> is the sum of all the Product Backlog items completed during a Sprint and the value of the increments of all previous Sprints. At the end of a Sprint, the new Increment must be \"Done,\" which means it must be in useable condition and meet the Scrum Team’s definition of \"Done\".",
+  "avatar_mssge_artifacts_increment_one": "<strong>The Increment</strong> is the sum of all the Product Backlog items completed during a Sprint and the value of the increments of all previous Sprints.",
+  "avatar_mssge_artifacts_increment_two": "At the end of a Sprint, the new Increment must be \"Done,\" which means it must be in useable condition and meet the Scrum Team’s definition of \"Done\".",
   "avatar_mssge_values_commitment_one": "People personally commit to achieving the goals of the Scrum Team.",
   "avatar_mssge_values_courage_one": "Scrum Team members have courage to do the right thing and work on tough problems.",
   "avatar_mssge_values_opennes_one": "The Scrum team and its stakeholders agree to be open about all the work and challenges with performing work.",
@@ -55,6 +56,24 @@
   "product-backlog_list_three": "For one product there is only one Product Backlog. Even though there is more than one Scrum Team.",
   "product-backlog_list_four": "Any time you can add details, estimates and order the item, we call Produck Backlog Refinement to this act and you can do it collaboration with the Developer Team",
   "sprint-backlog_one": "The Sprint Backlog is a plan with enough detail that changes in progress can be understood in the Daily Scrum. The Development Team modifies the Sprint Backlog throughout the Sprint, and the Sprint Backlog emerges during the Sprint. This emergence occurs as the Development Team works through the plan and learns more about the work needed to achieve the Sprint Goal.",
-  "sprint-backlog_two": "As new work is required, the Development Team adds it to the Sprint Backlog. As work is performed or completed, the estimated remaining work is updated. When elements of the plan are deemed unnecessary, they are removed. Only the Development Team can change its Sprint Backlog during a Sprint. The Sprint Backlog is a highly visible, real-time picture of the work that the Development Team plans to accomplish during the Sprint, and it belongs solely to the Development Team."
-
+  "sprint-backlog_two": "As new work is required, the Development Team adds it to the Sprint Backlog. As work is performed or completed, the estimated remaining work is updated. When elements of the plan are deemed unnecessary, they are removed. Only the Development Team can change its Sprint Backlog during a Sprint. The Sprint Backlog is a highly visible, real-time picture of the work that the Development Team plans to accomplish during the Sprint, and it belongs solely to the Development Team.",
+  "product-increment_one": "The Increment is the sum of all the Product Backlog items completed during a Sprint and the value of the increments of all previous Sprints. At the end of a Sprint, the new Increment must be \"Done\", which means it must be in useable condition and meet the Scrum Team’s definition of \"Done\".",
+  "product-increment_two": "An increment is a body of inspectable, done work that supports empiricism at the end of the Sprint. The increment is a step toward a vision or goal. The increment must be in useable condition regardless of whether the Product Owner decides to release it.",
+  "scrum-master_po_one": "Ensuring that goals, scope, and product domain are understood by everyone on the Scrum Team as well as possible;",
+  "scrum-master_po_two": "Finding techniques for effective Product Backlog management;",
+  "scrum-master_po_three": "Helping the Scrum Team understand the need for clear and concise Product Backlog items;",
+  "scrum-master_po_four": "Understanding product planning in an empirical environment;",
+  "scrum-master_po_five": "Ensuring the Product Owner knows how to arrange the Product Backlog to maximize value;",
+  "scrum-master_po_six": "Understanding and practicing agility; and,",
+  "scrum-master_po_seven": "Facilitating Scrum events as requested or needed.",
+  "scrum-master_dt_one": "Coaching the Development Team in self-organization and cross-functionality;",
+  "scrum-master_dt_two": "Helping the Development Team to create high-value products;",
+  "scrum-master_dt_three": "Removing impediments to the Development Team’s progress;",
+  "scrum-master_dt_four": "Facilitating Scrum events as requested or needed; and,",
+  "scrum-master_dt_five": "Coaching the Development Team in organizational environments in which Scrum is not yet fully adopted and understood.",
+  "scrum-master_org_one": "Leading and coaching the organization in its Scrum adoption;",
+  "scrum-master_org_two": "Planning Scrum implementations within the organization;",
+  "scrum-master_org_three": "Helping employees and stakeholders understand and enact Scrum and empirical product development;",
+  "scrum-master_org_four": "Causing change that increases the productivity of the Scrum Team; and,",
+  "scrum-master_org_five": "Working with other Scrum Masters to increase the effectiveness of the application of Scrum in the organization."
 }
