--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -53,5 +53,24 @@
   "product-backlog_list_one": "A Product Backlog is never complete. It might change once you have a better understanging of the product",
   "product-backlog_list_two": "Product Backlog is dynamic; it constantly changes to identify what the product needs to be appropriate, competitive, and useful",
   "product-backlog_list_three": "For one product there is only one Product Backlog. Even though there is more than one Scrum Team.",
-  "product-backlog_list_four": "Any time you can add details, estimates and order the item, we call Produck Backlog Refinement to this act and you can do it collaboration with the Developer Team"
+  "product-backlog_list_four": "Any time you can add details, estimates and order the item, we call Produck Backlog Refinement to this act and you can do it collaboration with the Developer Team",
+  "product-increment_one": "The Increment is the sum of all the Product Backlog items completed during a Sprint and the value of the increments of all previous Sprints. At the end of a Sprint, the new Increment must be \"Done\", which means it must be in useable condition and meet the Scrum Team’s definition of \"Done\".",
+  "product-increment_two": "An increment is a body of inspectable, done work that supports empiricism at the end of the Sprint. The increment is a step toward a vision or goal. The increment must be in useable condition regardless of whether the Product Owner decides to release it.",
+  "scrum-master_po_one": "Ensuring that goals, scope, and product domain are understood by everyone on the Scrum Team as well as possible;",
+  "scrum-master_po_two": "Finding techniques for effective Product Backlog management;",
+  "scrum-master_po_three": "Helping the Scrum Team understand the need for clear and concise Product Backlog items;",
+  "scrum-master_po_four": "Understanding product planning in an empirical environment;",
+  "scrum-master_po_five": "Ensuring the Product Owner knows how to arrange the Product Backlog to maximize value;",
+  "scrum-master_po_six": "Understanding and practicing agility; and,",
+  "scrum-master_po_seven": "Facilitating Scrum events as requested or needed.",
+  "scrum-master_dt_one": "Coaching the Development Team in self-organization and cross-functionality;",
+  "scrum-master_dt_two": "Helping the Development Team to create high-value products;",
+  "scrum-master_dt_three": "Removing impediments to the Development Team’s progress;",
+  "scrum-master_dt_four": "Facilitating Scrum events as requested or needed; and,",
+  "scrum-master_dt_five": "Coaching the Development Team in organizational environments in which Scrum is not yet fully adopted and understood.",
+  "scrum-master_org_one": "Leading and coaching the organization in its Scrum adoption;",
+  "scrum-master_org_two": "Planning Scrum implementations within the organization;",
+  "scrum-master_org_three": "Helping employees and stakeholders understand and enact Scrum and empirical product development;",
+  "scrum-master_org_four": "Causing change that increases the productivity of the Scrum Team; and,",
+  "scrum-master_org_five": "Working with other Scrum Masters to increase the effectiveness of the application of Scrum in the organization."
 }
