DevTeam - Adding DevelopmentTeam view

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -39,8 +39,8 @@
   "avatar_mssge_roles_three": "<strong>Teams are cross-functional:</strong> Have all competencies needed to accomplish the work without depending on others not part of the team.",
   "avatar_mssge_artifacts_backlog_one": "<strong>The Product Backlog </strong> is an ordered list of everything that is known to be needed in the product. It is the single source of requirements for any changes to be made to the product.",
   "avatar_mssge_artifacts_backlog_two": "<strong>The Product Owner </strong> is responsible for the Product Backlog, including its content, availability, and ordering.",
-  "avatar_mssge_artifacts_sprintBacklog_one" : "<strong>The Sprint Backlog</strong> is the set of Product Backlog items selected for the Sprint, plus a plan for delivering the product Increment and realizing the <strong>Sprint Goal.</strong> ",
-  "avatar_mssge_artifacts_sprintBacklog_two" : "<strong>The Sprint Backlog</strong>  is a forecast by the Development Team about what functionality will be in the next Increment and the work needed to deliver that functionality into a \"Done\" Increment.",
+  "avatar_mssge_artifacts_sprintBacklog_one" : "The <strong>Sprint Backlog</strong> is the set of Product Backlog items selected for the Sprint, plus a plan for delivering the product Increment and realizing the <strong>Sprint Goal.</strong> ",
+  "avatar_mssge_artifacts_sprintBacklog_two" : "The <strong>Sprint Backlog</strong>  is a forecast by the Development Team about what functionality will be in the next Increment and the work needed to deliver that functionality into a \"Done\" Increment.",
   "avatar_mssge_artifacts_increment_one": "<strong>The Increment</strong> is the sum of all the Product Backlog items completed during a Sprint and the value of the increments of all previous Sprints.",
   "avatar_mssge_artifacts_increment_two": "At the end of a Sprint, the new Increment must be \"Done,\" which means it must be in useable condition and meet the Scrum Team’s definition of \"Done\".",
   "avatar_mssge_values_commitment_one": "People personally commit to achieving the goals of the Scrum Team.",
@@ -49,11 +49,9 @@
   "avatar_mssge_values_respect_one": "Scrum Team members respect each other to be capable, independent people.",
   "avatar_mssge_values_focus_one": "Everyone focuses on the work of the Sprint and the goals of the Scrum Team.",
   "avatar_mssge_roles_scrumMaster_one": "The </strong>Scrum Master</strong> is a servant-leader for the Scrum Team. The Scrum Master helps those outside the Scrum Team understand which of their interactions with the Scrum Team are helpful and which aren’t. The Scrum Master helps everyone change these interactions to maximize the value created by the Scrum Team.",
-  "avatar_mssge_roles_productOwner_one": "The Product Owner is responsible for maximizing the value of the product resulting from work of the Development Team. How this is done may vary widely across organizations, Scrum Teams, and individuals.",
-  "avatar_mssge_roles_productOwner_two":"The <strong>Product Owner</strong> is one person, not a committee. The Product Owner may represent the desires of a committee in the Product Backlog, but those wanting to change a Product Backlog item’s priority must address the Product Owner.",
-  "avatar_mssge_roles_productOwner_three":"The <strong>Product Owner</strong> is one person, not a committee. The Product Owner may represent the desires of a committee in the Product Backlog, but those wanting to change a Product Backlog item’s priority must address the Product Owner.",
-  "avatar_mssge_roles_devTeam_one": "The <strong>Development Team</strong> consists of professionals who do the work of delivering a potentially releasable Increment of \"Done\" product at the end of each Sprint. A \"Done\" increment is required at the Sprint Review. Only members of the Development Team create the Increment.",
-  "avatar_mssge_roles_devTeam_two": "<strong>Development Teams</strong> are structured and empowered by the organization to organize and manage their own work. The resulting synergy optimizes the Development Team’s overall efficiency and effectiveness.",
+  "avatar_mssge_roles_productOwner_one": "The <strong>Product Owner </strong> is responsible for maximizing the value of the product resulting from work of the Development Team. How this is done may vary widely across organizations, Scrum Teams, and individuals.",
+  "avatar_mssge_roles_devTeam_one": "The <strong>Development Team</strong> consists of professionals who do the work of delivering a potentially releasable Increment of \"<strong>Done</strong>\" product at the end of each Sprint.",
+  "avatar_mssge_roles_devTeam_two": "A \"<strong>Done</strong>\" increment is required at the Sprint Review. Only members of the Development Team create the Increment.",
   "product-backlog_list_one": "A Product Backlog is never complete. It might change once you have a better understanging of the product",
   "product-backlog_list_two": "Product Backlog is dynamic; it constantly changes to identify what the product needs to be appropriate, competitive, and useful",
   "product-backlog_list_three": "For one product there is only one Product Backlog. Even though there is more than one Scrum Team.",
@@ -78,5 +76,20 @@
   "scrum-master_org_two": "Planning Scrum implementations within the organization;",
   "scrum-master_org_three": "Helping employees and stakeholders understand and enact Scrum and empirical product development;",
   "scrum-master_org_four": "Causing change that increases the productivity of the Scrum Team; and,",
-  "scrum-master_org_five": "Working with other Scrum Masters to increase the effectiveness of the application of Scrum in the organization."
+  "scrum-master_org_five": "Working with other Scrum Masters to increase the effectiveness of the application of Scrum in the organization.",
+  "product-owner_list_one": "Clearly expressing Product Backlog items;",
+  "product-owner_list_two": "Ordering the items in the Product Backlog to best achieve goals and missions;",
+  "product-owner_list_three": "Optimizing the value of the work the Development Team performs;",
+  "product-owner_list_four": "Ensuring that the Product Backlog is visible, transparent, and clear to all, and shows what the Scrum Team will work on next; and,",
+  "product-owner_desc_one": "The Product Owner may do the above work, or have the Development Team do it. However, the Product Owner remains accountable.",
+  "product-owner_desc_two": "The Product Owner is one person, not a committee. The Product Owner may represent the desires of a committee in the Product Backlog, but those wanting to change a Product Backlog item’s priority must address the Product Owner.",
+  "product-owner_desc_three": "For the Product Owner to succeed, the entire organization must respect his or her decisions. The Product Owner’s decisions are visible in the content and ordering of the Product Backlog. No one can force the Development Team to work from a different set of requirements.",
+  "product-owner_desc_four": "The Product Owner is the sole person responsible for managing the Product Backlog. Product Backlog management includes:",
+  "dev-team_desc_one": "Development Teams are structured and empowered by the organization to organize and manage their own work. The resulting synergy optimizes the Development Team’s overall efficiency and effectiveness.",
+  "dev-team_desc_two": "Development Teams have the following characteristics:",
+  "dev-team_list_one": "They are self-organizing. No one (not even the Scrum Master) tells the Development Team how to turn Product Backlog into Increments of potentially releasable functionality;",
+  "dev-team_list_two": "Development Teams are cross-functional, with all the skills as a team necessary to create a product Increment;",
+  "dev-team_list_three": "Scrum recognizes no titles for Development Team members, regardless of the work being performed by the person;",
+  "dev-team_list_four": "Scrum recognizes no sub-teams in the Development Team, regardless of domains that need to be addressed like testing, architecture, operations, or business analysis; and,",
+  "dev-team_list_five": "Individual Development Team members may have specialized skills and areas of focus, but accountability belongs to the Development Team as a whole."
 }
